...
                    //heightFactor: heightScreen > 500 ? 0.5 : 0.5,
                    child: Column(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        Lottie.asset('asset/lotties/Animation.json'),
                        Text(
                          'Flutter App',
                          style: TextStyle(
                            fontWeight: FontWeight.bold,
                            fontSize: 18.0,
                            letterSpacing: 20.0,
                          ),
                        ),
...
